[OnlyConnect] Squash some bugs
- Pre round information is now correct for each round
- The active team is now shown in the connecting wall view
- The connecting wall locks again after 3 failed strikes or completion
- Correct guesses don't transition through orange on the connecting wall

--- a/src/catbox/games/only_connect/resources/onlyconnect.css
+++ b/src/catbox/games/only_connect/resources/onlyconnect.css
@@ -202,7 +202,7 @@
     margin-bottom: 1rem;
 }
 #play-area[state="wall"] .not_found {
-    animation: solved ease-in-out 800ms 1;
+    animation: error ease-in-out 800ms 1;
     background: var(--db-orange);
     border-color: var(--db-orange);
     margin-bottom: 1rem;
@@ -235,8 +235,8 @@
     border-color: var(--db-blue);
   }
   to {
-    background: var(--db-orange);
-    border-color: var(--db-orange);
+    background: var(--rdp-green);
+    border-color: var(--rdp-green);
   }
 }
 
